--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@shopify/app": "3.9.2",
     "@shopify/cli": "3.9.2",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0"
   },
   "author": "sk_se"
 }
